[package]
name = "hash-value"
description = "A hashable, JSON-like, serde Value type."
license = "MIT"
version = "1.0.2"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"]}
possibly = "1"